Fixed mobile h1 line-spacing

--- a/front/app/sass/core/_base.sass
+++ b/front/app/sass/core/_base.sass
@@ -83,10 +83,11 @@ h6
 
 +max-width($mqbp-small)
   %header-base-mobile
-    line-height: 2.2rem
+    line-height: $base-line-height-double
     margin-bottom: 1.8rem
   h1
     @extend %header-base-mobile
+    line-height: $base-line-height-triple
     font-size: 3.2rem
   h2
     @extend %header-base-mobile
